# PUBLIC

./: CMakeLists.txt  Main.cpp  README.md
Common/: CMakeLists.txt  Structs.cpp  Structs.h
Game/: CMakeLists.txt  Game.cpp  Game.h
Geometry/: CMakeLists.txt  Point.h
